days and css update

--- a/src/index.html
+++ b/src/index.html
@@ -346,6 +346,8 @@
         
         .slotList .singleSlot .allVaccine .vaccine h4:empty:before {
             content: "Free";
+            color: green;
+            font-weight: bold;
         }
         
         .slotList .singleSlot .footer {
