--- a/src/index.html
+++ b/src/index.html
@@ -678,7 +678,9 @@
                 width: 87%;
             }
             .pageTitle .seperate {
-                display: none;
+                opacity: 0;
+                display: block;
+                height: 0;
             }
         }
     </style>
