--- a/src/index.html
+++ b/src/index.html
@@ -682,6 +682,9 @@
                 display: block;
                 height: 0;
             }
+            .pageTitle .stateName {
+                margin-bottom: 15px;
+            }
         }
     </style>
     <!-- Global site tag (gtag.js) - Google Analytics -->
